# spam_ml

./: .env  .gitignore  README.md  main.py  models.py  pyproject.toml  schemas.py  security.py  settings.py
db/: database.py  models.py  schemas.py
frontend/static/: app.js  styles.css
frontend/templates/: index.html
ml_models/: basic_model.py
ml_models/models/: basic_model.py  medium_model.py  premium_model.py
ml_models/models_data/: tfidf_vectorizer.joblib
ml_models/train/: train_medium_model.py  train_premium_model.py
